--- a/src/Hph/View/front/artist.html.twig
+++ b/src/Hph/View/front/artist.html.twig
@@ -27,7 +27,7 @@
             </div>
             <div class="col-xs-4">
                 <div class="content-div upper text-center">
-                    <img src="img/artist/{{ artist.imgArtist }}" class="img-responsive center-img">
+                    <img src="../../../img/artist/{{ artist.imgArtist }}" class="img-responsive center-img">
                     <hr class="hr">
                     {% for prog in progs %}
                         {% if prog.showcase == 0  %}
@@ -76,7 +76,7 @@
     <div class="visible-xs container">
         <div class="col-xs-12">
             <div class="content-div text-center">
-                <img src="img/artist/{{ artist.imgArtist }}" class="img-responsive">
+                <img src="../../../img/artist/{{ artist.imgArtist }}" class="img-responsive">
                 <h1 class="font-circula">{{ artist.name }}</h1>
                 <p>{{ artist.bio }}</p>
                 <div class="artiste-tag">
