--- a/src/Hph/View/front/partner.html.twig
+++ b/src/Hph/View/front/partner.html.twig
@@ -9,7 +9,7 @@
                 {% if partenaire.type == 'culturel' %}
                     <div class="col-md-4 col-xs-4">
                         <a href="{{ partenaire.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
+                            <img src="../../../img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -22,7 +22,7 @@
                 {% if partenaire.type == 'institutionnels' %}
                     <div class="col-md-4 col-xs-4">
                         <a href="{{ partenaire.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
+                            <img src="../../../img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -35,7 +35,7 @@
                 {% if partenaire.type == 'média' %}
                     <div class="col-md-4 col-xs-4">
                         <a href="{{ partenaire.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
+                            <img src="../../../img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -48,7 +48,7 @@
                 {% if partenaire.type == 'privé' %}
                     <div class="col-md-4 col-xs-4">
                         <a href="{{ partenaire.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
+                            <img src="../../../img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
