--- a/src/Hph/View/front/home.html.twig
+++ b/src/Hph/View/front/home.html.twig
@@ -12,7 +12,7 @@
                 </div>
             {% endfor %}
             <div class="col-xs-6 col-xs-offset-3">
-                <img src="img/global/logo-only.png" alt="Logo du Festival" class="img-responsive logo-big">
+                <img src="../../../img/global/logo-only.png" alt="Logo du Festival" class="img-responsive logo-big">
             </div>
             <h2 class="separator-title font-dokyo"><a href="/programmation" class="white font-dokyo">PROGRAMMATION</a></h2>
             <hr class="hr">
@@ -68,7 +68,7 @@
                             <div class="col-xs-12 col-xs-offset-0 col-sm-4">
                                 <div class="content-div text-justify ">
                                     <div class="text-center">
-                                        <img src="img/news/{{ news.imgNews }}" class="img-responsive">
+                                        <img src="../../../img/news/{{ news.imgNews }}" class="img-responsive">
                                     </div>
                                     <a href="/newsOne/{{ news.id }}" class="news-link"><h3 class="font-circula">{{ news.title }}</h3></a>
                                     <hr class="hr">
