--- a/src/Hph/View/front/news.html.twig
+++ b/src/Hph/View/front/news.html.twig
@@ -8,7 +8,7 @@
                 <div class="col-xs-12 col-xs-offset-0 col-sm-4">
                     <div class="content-div text-justify">
                         <div class="text-center">
-                            <img src="img/news/{{ news.imgNews }}" class="img-responsive">
+                            <img src="../../../img/news/{{ news.imgNews }}" class="img-responsive">
                         </div>
                         <a href="/newsOne/{{ news.id }}" class="news-link"><h2 class="font-circula">{{ news.title }}</h2></a>
                         <hr class="hr">
