--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -186,8 +186,8 @@
         </div>
     </div>
 </div>
-<script src="js/jquery-3.1.1.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="js/script.js"></script>
+<script src="../../../js/jquery-3.1.1.min.js"></script>
+<script src="../../../bootstrap/js/bootstrap.min.js"></script>
+<script src="../../../js/script.js"></script>
 </body>
 </html>
