--- a/web/css/style.css
+++ b/web/css/style.css
@@ -90,7 +90,7 @@ body {
     .separator-title {
         font-size: 11vw;
         color: white;
-        text-align: center;
+
     }
 }
 
@@ -98,6 +98,7 @@ body {
     .separator-title {
         font-size: 7.5vw;
         color: white;
+        text-align: center;
     }
 }
 
@@ -657,6 +658,41 @@ a:hover {
 
 .img-cancel {
     opacity: 0.25;
+}
+
+.styled-select {
+    background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+    height: 70px;
+    overflow: hidden;
+    width: 190px;
+    color: white;
+    font-size: 20px;
+}
+
+.styled-select select {
+    background: transparent;
+    border: none;
+    font-size: 14px;
+    height: 50px;
+    padding: 15px; /* If you add too much padding here, the options won't show in IE */
+    width: 170px;
+
+
+}
+.blue {
+    background-color: #18252e;
+}
+select {
+    -moz-appearance: none;
+}
+.semi-square {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;w
+}
+a:active
+{
+    outline:none;
 }
 
 /* ~~~~~> End Programmation <~~~~~ */
