--- a/web/css/style.css
+++ b/web/css/style.css
@@ -688,7 +688,7 @@ select {
 .semi-square {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 5px;w
+    border-radius: 5px;
 }
 a:active
 {
