--- a/src/Hph/View/front/partner.html.twig
+++ b/src/Hph/View/front/partner.html.twig
@@ -56,7 +56,7 @@
         </div>
         <hr class="hr">
         <div class="text-center">
-            <a href="../../../../index.php?page=contact"><button class="btn btn-primary partnair-btn">Devenez Partenaire</button></a>
+            <a href="../../../../index.php?page=contact"><button class="btn btn-default contact-btn">Devenez Partenaire</button></a>
         </div>
     </div>
 {% endblock %}
