modif bouton rechercher sur page programmation

--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -43,7 +43,7 @@
                 #}
             </div>
             <input type="hidden" name="page" value="programmation" />
-            <input type="submit" name="btnSubmitSearch" Value="Rechercher" />
+            <input type="submit" class="btn-default contact-btn semi-square" name="btnSubmitSearch" Value="Rechercher" />
         </form>
     </div>
     <div class="container">
