--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -43,7 +43,9 @@
                 #}
             </div>
             <input type="hidden" name="page" value="programmation" />
+            <div>
             <input type="submit" class="btn-default contact-btn semi-square" name="btnSubmitSearch" Value="Rechercher" />
+            </div>
         </form>
     </div>
     <div class="container">
