--- a/web/css/style.css
+++ b/web/css/style.css
@@ -166,6 +166,14 @@ a:hover {
     color: rgba(43, 175, 151, 1);
     text-decoration: none;
 }
+a:focus {
+    color: #18252e;
+}
+
+a:active
+{
+    outline:none;
+}
 
 /* ~~~~~> End General <~~~~~ */
 
@@ -290,6 +298,9 @@ a:hover {
 .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
     color: #ed7a21 !important;
     background-color: transparent !important;
+}
+ul > a:focus {
+    color: purple;
 }
 
 /* ~~~~~> End Navbar <~~~~~ */
