--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -4,7 +4,7 @@
 {% block content %}
     <div>
     <div class="text-center">
-        <form action="/" method="get">
+        <form action="/" method="post">
             <div class="prog-dropdown styled-select blue semi-square font-bebas">
                 <select {#class="select-attr"#} name="lieux">
                     <option value="-1" {% if -1 == lieuSelected %}selected="selected"{% endif %}>Lieux</option>
