--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -56,7 +56,7 @@
                 <li><a href="../../../partner">Partenaires</a></li>
                 <li><a href="../../../contact">Contact</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right social hidden-xs">
+            <ul class="nav navbar-nav navbar-right social hidden-sm">
                 <li><a href="https://www.facebook.com/hoppophop/"><i class="fa fa-facebook-square navbar-logo" aria-hidden="true"></i></a></li>
                 <li><a href="https://twitter.com/FestivalHPH"><i class="fa fa-twitter-square navbar-logo" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/hoppophop/"><i class="fa fa-instagram navbar-logo" aria-hidden="true"></i></a></li>
