changements css su page progr, au niveau des boutons de filtre

--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -44,7 +44,7 @@
             </div>
             <input type="hidden" name="page" value="programmation" />
             <div>
-            <input type="submit" class="btn-default contact-btn semi-square" name="btnSubmitSearch" Value="Rechercher" />
+            <input type="submit" class="btn-default contact-btn semi-square btn-filtre" name="btnSubmitSearch" Value="Rechercher" />
             </div>
         </form>
     </div>
