changement panneau homepage

--- a/src/Hph/View/front/home.html.twig
+++ b/src/Hph/View/front/home.html.twig
@@ -34,19 +34,11 @@
             <div class="separator-div home-ticket">
                 <div class="container-fluid">
                     <div class="row ticket hidden-xs hidden-sm">
-                        <div class="col-md-offset-1 col-md-5 hidden-xs hidden-sm col-ticket span-ticket">
+                        <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm col-ticket span-ticket">
                             <a href="/ticket">
                                 <div class="panneau col-ticket">
                                     <span class="left-text font-bebas">PASS</span>
-                                    <span class="right-text font-bebas">1 JOUR</span>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-5 hidden-xs hidden-sm col-ticket span-ticket">
-                            <a href="/ticket">
-                                <div class="panneau col-ticket">
-                                    <span class="left-text font-bebas">PASS</span>
-                                    <span class="right-text font-bebas">2 JOURS</span>
+                                    <span class="right-text font-bebas">ACHAT EN LIGNE</span>
                                 </div>
                             </a>
                         </div>
