--- a/src/Hph/View/back/partner.html.twig
+++ b/src/Hph/View/back/partner.html.twig
@@ -57,7 +57,7 @@
             </tr>
             </thead>
             <tbody>
-            {%  for partner in partners %}
+            {%  for partner in partenaires %}
                 <tr>
                     <th scope="row">{{ partner.id }}</th>
                     <td>{{ partner.url }}</td>
