--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="benevolat-div ">
-                <h1 class="text-center font-circula font">Vous souhaitez aider à la mise en place du festival ?</h1>
+                <h1 class="text-center font-circula font">Vous souhaitez aider à la mise en place du festival&nbsp?</h1>
                 <div class="intro font-bebas">
                     <p>Pour quelques heures ou pour une vie, habile, jovial, dynamique, en vieux briscard de la bricole ou de la débrouille, prenez part à ce projet et apportez votre pierre à l&rsquo;édifice !</p>
                     <p>Accessible à tous : Devenez acteur du festival en participant à des missions simples et concrètes (il faut obligatoirement être majeur pour être bénévole sur le festival).</p>
