--- a/src/Hph/View/back/food.html.twig
+++ b/src/Hph/View/back/food.html.twig
@@ -68,7 +68,7 @@
                 <tr>
                     <th scope="row">{{ food.id }}</th>
                     <td>{{ food.name }}</td>
-                    <td><img src="../web/img/foodtruck/{{ food.imgEat }}" alt="Image du Foodtruck" class="img-list"></td>
+                    <td><img src="../img/foodtruck/{{ food.imgEat }}" alt="Image du Foodtruck" class="img-list"></td>
                     <td>{{ food.place_name }}</td>
                     <td>{{ food.start|localizeddate('long', 'short', 'fr') }}</td>
                     <td>{{ food.end|localizeddate('long', 'short', 'fr') }}</td>
