--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -67,7 +67,7 @@
                     <th scope="row">{{ place.id }}</th>
                     <td>{{ place.name }}</td>
                     <td><a href="http://{{ place.url }}">{{ place.url }}</a></td>
-                    <td><img src="../web/img/place/{{ place.imgPlace }}" alt="Image du lieux" class="img-list"></td>
+                    <td><img src="../img/place/{{ place.imgPlace }}" alt="Image du lieux" class="img-list"></td>
                     <td>{{ place.start|localizeddate('long', 'short', 'fr') }}</td>
                     <td>{{ place.end|localizeddate('long', 'short', 'fr') }}</td>
                     <td>
