--- a/src/Hph/View/back/dimaorl.html.twig
+++ b/src/Hph/View/back/dimaorl.html.twig
@@ -49,7 +49,7 @@
                 <tr>
                     <th scope="row">{{ sunday.id }}</th>
                     <td>{{ sunday.title }}</td>
-                    <td><img src="../web/img/sunday/{{ sunday.imgSunday }}" alt="Image de l'activité" class="img-list"></td>
+                    <td><img src="../img/sunday/{{ sunday.imgSunday }}" alt="Image de l'activité" class="img-list"></td>
                     <td>
                         <button type="button" class="btn btn-success" data-toggle="modal" data-target="#edit{{ sunday.id }}"><i class="fa fa-pencil"></i></button>
                         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete{{ sunday.id }}"><i class="fa fa-trash-o"></i></button>
