--- a/src/Hph/View/back/partner.html.twig
+++ b/src/Hph/View/back/partner.html.twig
@@ -69,7 +69,7 @@
                             Non
                         {% endif %}
                     </td>
-                    <td><img src="../web/img/partner/{{ partner.imgPartner }}" alt="Image du Partenaire" class="img-list"></td>
+                    <td><img src="../img/partner/{{ partner.imgPartner }}" alt="Image du Partenaire" class="img-list"></td>
                     <td>
                         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete{{ partner.id }}"><i class="fa fa-trash-o"></i></button>
                     </td>
