--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -41,7 +41,7 @@
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">La vie au festival <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
-                        <li><a href="../../../food">Se restaurer</a></li>
+                        <li><a href="../../../food">Animations</a></li>
                         <li><a href="../../../place" id="placeLink">Lieux</a></li>
                     </ul>
                 </li>
