--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
                 <!-- class active -->
-                <li><a href="../../../ticket">Billetterie</a></li>
+                <li><a href="../../../ticket">Réservez Votre Pass</a></li>
                 <li><a href="../../../cashless">Cashless</a></li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">La vie au festival <span class="caret"></span></a>
