--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -37,8 +37,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <hr class="hr">
-                <iframe width="100%" height="750px" frameBorder="0" src="https://umap.openstreetmap.fr/fr/map/hop-pop-hop-lieux_136503?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&allowEdit=false&moreControl=false&searchControl=false&tilelayersControl=false&embedControl=false&datalayersControl=false&onLoadPanel=undefined&captionBar=false&fullscreenControl=false&locateControl=false&measureControl=false&editinosmControl=false#16/47.9032/1.9073" class="hidden-xs"></iframe>
-                <iframe width="100%" height="250px" frameBorder="0" src="https://umap.openstreetmap.fr/fr/map/hop-pop-hop-lieux_136503?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=false&allowEdit=false&moreControl=false&searchControl=false&tilelayersControl=false&embedControl=false&datalayersControl=false&onLoadPanel=undefined&captionBar=false&fullscreenControl=false&locateControl=false&measureControl=false&editinosmControl=false#16/47.9032/1.9073" class="visible-xs"></iframe>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%" height="750px" class="hidden-xs"></iframe>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%" height="250px" class="visible-xs"></iframe>
             </div>
         </div>
     </div>
