--- a/web/css/style.css
+++ b/web/css/style.css
@@ -316,6 +316,13 @@ ul > a:focus {
 
 @media (max-width: 1110px) {
     .partnair-logo {
+        /*width: 100%;*/
+        /*height: 75px;*/
+        background-color: white;
+        border-radius: 20px;
+        color: #004e57;
+        border: 2px solid #2baf97;
+        box-shadow: 2px 2px 0 #017553;
         width: 100%;
         height: 75px;
     }
@@ -323,6 +330,13 @@ ul > a:focus {
 
 @media (min-width: 1110px) {
     .partnair-logo {
+        /*width: 100%;*/
+        /*height: 200px;*/
+        background-color: white;
+        border-radius: 20px;
+        color: #004e57;
+        border: 2px solid #2baf97;
+        box-shadow: 3px 3px 0 #017553;
         width: 100%;
         height: 200px;
     }
