bouton qui clignote à chaque hover c'est du nanan

--- a/src/Hph/View/front/home.html.twig
+++ b/src/Hph/View/front/home.html.twig
@@ -37,7 +37,7 @@
                         <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm col-ticket span-ticket">
                             <a href="/ticket">
                                 <div class="panneau col-ticket">
-                                    <span class="left-text font-bebas">RESERVER VOTRE</span>
+                                    <span class="left-text font-bebas">RESERVEZ VOTRE</span>
                                     <span class="right-text font-bebas">PASS</span>
                                 </div>
                             </a>
