modification des contenus en dur, à savoir, page bénévolat, page transport, page lieux, integration du iframe cashless avec son contenu en dur, ainsi que celui du google analytics

--- a/src/Hph/View/front/ticket.html.twig
+++ b/src/Hph/View/front/ticket.html.twig
@@ -3,7 +3,39 @@
 {% block titleMobile %}BILLETTERIE{% endblock %}
 {% block content %}
     <div class="container">
-        <a title="Logiciel billetterie en ligne" href="https://www.weezevent.com//?c=sys_widget" class="weezevent-widget-integration" target="_blank" data-src="https://www.weezevent.com/widget_billeterie.php?id_evenement=240295&lg_billetterie=1&code=74808&resize=1&width_auto=1&color_primary=00AEEF" data-width="650" data-height="600" data-id="240295" data-resize="1" data-width_auto="1" data-noscroll="0" data-nopb="0">Billetterie Weezevent</a>
+        <div class="row">
+            <div class="benevolat-div ">
+                <h1 class="text-center font-circula font">BILLETTERIE DU FESTIVAL</h1>
+                <div class="intro font-bebas text-center">
+                    <p>Pass « Early Birds » 2 Jours : 10 Euros (jusqu’au 31/08 – 23h59)</p>
+                    <p>À partir du 01/09/2017 :</p>
+                    <p>Pass 1 Jour (Vendredi OU Samedi) : 10 Euros</p>
+                    <p>Pass 2 Jours (Vendredi et Samedi) : 16 Euros</p>
+                </div>
+
+                <hr class="hr">
+
+                <div class="activites">
+
+                    <p>Votre bracelet d’accès sera à retirer au Jardin de l’Evêché obligatoirement <br>
+                        (pas d’accès direct dans les salles sans votre bracelet qui est donné en échange de votre
+                        billet).
+                    </p>
+                </div>
+                <div class="activites">
+
+                    <p>Le billet donne accès à tous les concerts, dans la mesure des capacités d’accueil de chaque lieu.<br>
+                        Pensez à venir en avance pour les groupes que vous ne voulez pas manquer.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <a title="Logiciel billetterie en ligne" href="https://www.weezevent.com//?c=sys_widget"
+           class="weezevent-widget-integration" target="_blank"
+           data-src="https://www.weezevent.com/widget_billeterie.php?id_evenement=240295&lg_billetterie=1&code=74808&resize=1&width_auto=1&color_primary=00AEEF"
+           data-width="650" data-height="600" data-id="240295" data-resize="1" data-width_auto="1" data-noscroll="0"
+           data-nopb="0">Billetterie Weezevent</a>
     </div>
     <script type="text/javascript" src="https://www.weezevent.com/js/widget/min/widget.min.js"></script>
 {% endblock %}
