--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -5,54 +5,96 @@
     <div class="container">
         <div class="row">
             <div class="benevolat-div ">
-                <h1 class="text-center font-circula font">Vous souhaitez aider à la mise en place du festival&nbsp?</h1>
+                <h1 class="text-center font-circula font">DEVENEZ BÉNÉVOLE DU FESTIVAL !</h1>
                 <div class="intro font-bebas">
-                    <p>Pour quelques heures ou pour une vie, habile, jovial, dynamique, en vieux briscard de la bricole ou de la débrouille, prenez part à ce projet et apportez votre pierre à l&rsquo;édifice !</p>
-                    <p>Accessible à tous : Devenez acteur du festival en participant à des missions simples et concrètes (il faut obligatoirement être majeur pour être bénévole sur le festival).</p>
+                    <p>Pour quelques heures ou pour une vie, habile, jovial, dynamique, en vieux briscard de la bricole
+                        ou de la débrouille, prenez part à ce projet et apportez votre pierre à l&rsquo;édifice !</p>
+                    <br>
+                    <p>Accessible à tous : Devenez acteur du festival en participant à des missions simples et concrètes
+                        (il faut obligatoirement être majeur pour être bénévole sur le festival).</p>
                     <p>Convivial : Seul(e) ou entre amis(es), c&rsquo;est un bon moyen de joindre l&rsquo;utile à l&rsquo;agréable.</p>
+                    <p>Faites votre demande : remplissez le formulaire ci-dessous, toute demande incomplète ne pourra
+                        être traitée.</p>
+                    <p><strong>Merci de ne vous inscrire qu’une seule fois.</strong></p>
+                    <p><i>En cas de forte affluence, nous ne garantissons pas de pouvoir répondre favorablement à toutes
+                            les demandes de bénévolat.</i></p>
                 </div>
 
                 <hr class="hr">
 
                 <h2 class="font-circula titre2">Les grandes activités auxquelles vous pouvez participer :</h2>
                 <div class="activites">
-                    <span class="titre">Atelier création d&rsquo;éléments de décoration et de signalétique :</span>
-                    <p>Tous les ateliers auront lieu en début de soirée le mercredi 31 août, le jeudi 1er , le lundi 5 , le mercredi 7 et le jeudi 8 septembre.
-                </p>
-                </div>
-                <div class="activites">
-                    <span class="titre">Le montage :</span>
-                    <p>Pendant 5 jours, tout le monde s&rsquo;active pour faire prendre vie au festival du lundi 12 au vendredi 16 septembre 15h: montage des scènes, installation de la décoration, montage des bars</p>
-                </div>
-                <div class="activites">
-                    <span class="titre">Pendant le festival</span>
-                    <p>vendredi 15, 16h30 au samedi 16 septembre 2h</p>
+                    <span class="titre text-center">Avant le festival</span>
+
+                    <p><strong>WORKSHOP SCÉNOGRAPHIE</strong> : Si tu es doué de tes dix doigts, viens réaliser avec
+                        nous les derniers
+                        éléments de déco qui embelliront le site. Les ateliers auront lieu en soirée, à l'Astrolabe, une
+                        quinzaine de jours avant le festival.
+                    </p>
+                    <p><strong>AMÉNAGEMENT DU SITE</strong> : pendant 5 jours, tout le monde s’active pour donner vie au
+                        festival.<br>
                     <ul>
-                        <li>Bar : vous servez les clients, vous vous occupez des stocks et du réapprovisionnement.</li>
-                        <li>Cashless : vous vendez et créditez les cartes de paiement pour les bars.</li>
-                        <li>Contrôle billet : vous contrôlez la validité des billets à l&rsquo;entrée du site</li>
-                        <li>Traducteur média : vous traduisez les interviews.</li>
-                        <li>Espace restauration : mise en place du buffet, réapprovisionnement des plats, vaisselle, </li>
-                        <li>Accueil artiste : vous prenez en charge l&rsquo;artiste de son arrivée et à son départ.</li>
-                        <li>Green Team : vous sensibilisez le public au tri sélectif, vous gérez les déchets.</li>
-                        <li>Photographe : vous photographiez les artistes, les concerts, les ambiances du festival</li>
-                        <li>Accueil info/ merchandising : vous informez le public, vous accueillez les personnes en situation de handicap, vous vous occupez de la boutique du festival.</li>
+                        <li>Montage des structures / tentes : si le gros œuvre ne te fait pas peur, cette mission est
+                            pour
+                            toi
+                        </li>
+                        <li>Montage de la décoration: installation des éléments de décorations (conforts et visuels)
+                            réalisés par la dream-team bénévoles de l'Astrolabe.
+                        </li>
+                        <li>Montage des bars: à partir du mercredi matin 13 septembre et jusqu'au jeudi sur les
+                            différents
+                            sites du festival
+                        </li>
                     </ul>
                 </div>
                 <div class="activites">
-                    <span class="titre">Démontage :</span>
-                    <p>Dimanche 17 dès 14h au lundi 18 septembre</p>
+                    <span class="titre text-center">Pendant le festival</span>
+                    <p>Il est important d’être disponible les deux jours du festival</p>
+                    <ul>
+                        <li>Bar : vous servez les clients, vous vous occupez des stocks boissons, des stocks gobelets
+                            réutilisables.
+                        </li>
+                        <li>Cashless : vous vendez et créditez les cartes de paiement pour les bars, foodtruck. Vous
+                            renseignez le public sur le fonctionnement.
+                        </li>
+                        <li>Billeterie : vous vendez les billets pour le festival, donnez les bracelets d’accès et
+                            les cartes cashless aux festivaliers et vous accueillez les invités et partenaires.
+                        </li>
+                        <li>Accueil point info : vous informez et orientez le public.</li>
+                        <li>Accueil bénévoles : vous accueillez, guidez et répondez aux questions des bénévoles. Vous
+                            êtes également l'interface avec l’équipe de production.
+                        </li>
+                        <li>Merchandising : vous vendez les articles du festival et des groupes.</li>
+                        <li>Green Team : vous sensibilisez le public au tri sélectif, vous gérez les déchets.</li>
+                        <li>Espace restauration Artistes : vous mettez en place le buffet, réapprovisionner les plats,
+                            vaisselle, etc…
+                        </li>
+                        <li>Accueil artiste : vous prenez en charge l’artiste de son arrivée à son départ, vous préparez
+                            et rangez les loges.
+                        </li>
+                        <li>Traducteur média: vous traduisez les interviews.</li>
+                        <li>Relations Presse : vous êtes en charge des artistes lors des interview (les guider vers
+                            l'espace presse, gérer leur intervention en lien avec l’attaché de presse)
+                        </li>
+                        <li>Réseaux sociaux : vous alimentez les réseaux sociaux du festival sur les 2 jours (photos, vidéo, gif, etc...) En lien avec le chargé de communication et l’équipe vidéo / photos.
+                        </li>
+                    </ul>
+                </div>
+                <div class="activites">
+                    <span class="titre text-center">Après le Festival</span>
+                    <p>Démontage du site : à partir du dimanche après-midi jusqu'au mercredi 20 septembre.</p>
                 </div>
                 <hr class="hr">
 
                 <div class="activites">
-                    <p>Faites votre demande : remplissez le formulaire ci-dessous, toute demande incomplète ne pourra être traitée.</p>
-                    <p>Merci de ne vous inscrire qu&rsquo;une seule fois.</p>
-                    <p>En cas de forte affluence, nous ne garantissons pas de pouvoir répondre favorablement à toutes les demandes de bénévolat.</p>
+                    <p>Faites votre demande : remplissez le formulaire ci-dessous, toute demande incomplète ne pourra
+                        être traitée.</p>
                 </div>
             </div>
             <div class="text-center">
-                <a href="/contact"><button class="btn btn-primary contact-btn volunteer-btn">Devenez Bénévole</button></a>
+                <a href="/contact">
+                    <button class="btn btn-primary contact-btn volunteer-btn">Devenez Bénévole</button>
+                </a>
             </div>
         </div>
     </div>
