--- a/src/Hph/View/front/cashless.html.twig
+++ b/src/Hph/View/front/cashless.html.twig
@@ -2,5 +2,131 @@
 {% block title %}Cashless{% endblock %}
 {% block titleMobile %}CASHLESS{% endblock %}
 {% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="benevolat-div ">
+                <h1 class="text-center font-circula font">LE CASHLESS SUR LE FESTIVAL</h1>
+                <div class="intro font-bebas text-center">
+                    <p>Pré-chargez dès à présent votre carte cashless pour le festival, elle vous sera donné lors <br>de
+                        votre arrivée au guichet d’entrée, là où vous récupérez votre bracelet</p>
+                </div>
+
+                <hr class="hr">
+                <br>
+
+                <a href="https://widget.nemopay.net/#/?color_btnbg=12ac9a&color_btnhbg=ef7d24&system_id=lastrolabe&lang=fr"
+                   data-iframe-width="100%" data-iframe-background="transparent" id="nemolink">Accéder à mon compte</a>
+                <script type="text/javascript" src="https://static.nemopay.net/nemoframe.min.js"></script>
+
+                <h2 class="text-center">DES QUESTIONS SUR LE CASHLESS ?</h2>
+                <div class="text-center">
+                    <p>Pour sa seconde édition Hop Pop Hop poursuit le paiement dématérialisé : le « cashless ».
+                        Terminé les paquets de jetons qui dépassent de la poche, tout votre argent pour le bar et la
+                        restauration se trouve désormais sur une carte (semblable à une carte bancaire) que vous pouvez
+                        charger
+                        à votre convenance dans les banques du festival (au 108 et au Jardin de l’Evêché) ou sur ce site
+                        web
+                        durant le festival.</p>
+                </div>
+
+                <div class="activites">
+                    <h3 class="text-center">Comment récupérer ma carte ?</h3>
+                    <p>Si vous avez pré-chargé votre carte, celle-ci vous sera remise à l’entrée du festival lors du
+                        contrôle de votre billet.
+                        Si vous n’avez pas pré-chargé votre carte, rendez vous à un « guichet cashless ». Une carte vous
+                        sera remise et vous pourrez la créditer par espèces, carte bancaire ou chèques. Vous pourrez
+                        ensuite créer un compte en utilisant le numéro inscrit sur la carte.
+                    </p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">Est-ce que je peux utiliser cette carte sur tout l’événement ? </h3>
+                    <p>Cette carte sera le seul moyen de paiement accepté sur la totalité du site pour vos boissons.
+                        Vous pourrez payer la nourriture dans les foodtrucks en cashless, espèces et en CB.</p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">Comment recharger mon compte ? </h3>
+                    <p> Avant le festival, vous pouvez recharger en ligne en vous créant un compte sur le site internet
+                        du festival.<br>
+                        Pendant l’évènement vous pouvez recharger votre carte de deux façons :<br>
+                        – avec votre smartphone sur le site internet du festival.<br>
+                        – aux « guichets cashless » présents sur le site. <br>
+                        Vous pouvez recharger votre compte autant de fois que vous le souhaitez, avant et pendant
+                        l’événement.</p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">Que se passe-t-il si ma carte est volée ou perdue ? </h3>
+                    <p>Si vous avez créé un compte sur le site Internet du festival, vous pourrez demander le blocage de
+                        votre carte en vous rendant à un « guichet cashless ».
+                        Vous pouvez créer un compte :<br>
+                        – soit avant de vous rendre à l’événement en saisissant le numéro de votre billet : vous
+                        récupérez votre carte à l’entrée du festival.<br>
+                        – soit après avoir récupéré une carte à un « guichet cashless » en saisissant le numéro de la
+                        carte.<br>
+                        Cette opération d’indentification est nécessaire pour permettre le blocage de votre carte. Si
+                        vous n’avez pas créé de compte et associé votre carte, le blocage sera impossible.<br>
+                        Votre carte est comme votre portefeuille : si vous la perdez, l’argent stocké dessus sera
+                        également perdu.</p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">Pourquoi créer un compte ? </h3>
+                    <p>En créant un compte, vous pourrez :<br>
+                        – consulter le solde de votre carte et l’historique des transactions<br>
+                        – enregistrer votre Carte Bancaire pour un rechargement plus rapide<br>
+                        – bloquer votre carte et en obtenir une nouvelle en cas de perte ou de vol<br>
+                        – recharger avant l’évènement via le site internet ou l’application<br>
+                        – obtenir le remboursement de votre solde à l’issue de l’événement</p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">Que se passe-t-il avec mon argent après l’événement ? </h3>
+                    <p>Il est possible de récupérer l’argent restant sur votre carte après l’événement si le solde de
+                        celle-ci est supérieur à 0,5€. Pour cela, connectez-vous à votre compte et vérifiez que votre
+                        solde apparait bien. Vous pourrez alors faire une demande de remboursement et saisir la CB sur
+                        laquelle sera crédité l’argent.<br>
+                        Si votre solde n’apparaît pas, vérifiez que votre carte est bien rattachée à votre compte :
+                        l’identifiant à 6 lettres doit être indiqué à côté de votre adresse e-mail.<br>
+                        Si vous n’aviez pas créé de compte, vous pourrez le faire en utilisant l’identifiant à 6 lettres
+                        présent sur votre carte. Attention : n’utilisez pas le code-barres de votre billet pour créer le
+                        compte, car celui-ci n’est pas relié à la carte qui vous a été remise au « guichet
+                        cashless ».<br>
+                        Les remboursement seront accessibles à partir du 17 Septembre jusqu’au 02 Octobre 2017</p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">La création d’un compte est-elle obligatoire ? </h3>
+                    <p>Non, vous pouvez recharger votre carte directement aux « guichets cashless ». Votre carte reste
+                        alors totalement anonyme. Attention : dans ce cas, votre carte ne pourra pas être bloquée en cas
+                        de perte ou de vol. </p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">Est-il possible d’utiliser la carte d’un autre événement ?</h3>
+                    <p> Non, il est impossible d’utiliser une autre carte que celle fournie durant le festival.
+                    </p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">La carte est-elle payante ?</h3>
+                    <p> Non, cette carte est complètement gratuite.</p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center"> Comment connaître le solde de ma carte ?</h3>
+                    <p> Si vous avez créé un compte, vous pourrez consulter votre solde sur le site Internet du
+                        festival. Vous pouvez également demander votre solde à un « guichet cashless ».
+                    </p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">Ai-je accès à un récapitulatif de mes transactions ?</h3>
+                    <p>Oui, vous pouvez accéder au récapitulatif de vos transactions via votre compte sur le site
+                        Internet du festival. </p>
+                </div>
+                <div class="activites">
+                    <h3 class="text-center">Comment prendre soin de ma carte ?</h3>
+                    <p>Votre carte est équipée d’une puce électronique dans laquelle est stocké votre argent. Prenez-en
+                        soin
+                        pour éviter les désagréments ! Évitez toute exposition à la chaleur ou à une flamme et ne tentez
+                        surtout
+                        pas de la percer : cela la rendrait immédiatement inopérante.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
