--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -5,7 +5,9 @@
     <div class="container text-center">
         <div class="row">
             <h2 class="white font-circula">Lieux du Festival</h2>
-            {%  for place in places %}
+            <p class="text-center">Les pass du festival vous donnent accès aux 6 lieux du festival et à tous les
+                concerts </p>
+            {% for place in places %}
                 {% if place.showcase == 0 %}
                     <div class="col-xs-6 col-sm-4">
                         <div class="thumbnail thumbnail-div">
@@ -21,7 +23,7 @@
         <div class="row">
             <hr class="hr-min">
             <h2 class="white font-circula">Showcases</h2>
-            {%  for place in places %}
+            {% for place in places %}
                 {% if place.showcase == 1 %}
                     <div class="col-xs-6 col-sm-4">
                         <div class="thumbnail thumbnail-div">
@@ -37,8 +39,11 @@
         <div class="row">
             <div class="col-xs-12">
                 <hr class="hr">
-                <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%" height="750px" class="hidden-xs"></iframe>
-                <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%" height="250px" class="visible-xs"></iframe>
+                <h2 class="white font-circula">Carte</h2>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%"
+                        height="750px" class="hidden-xs"></iframe>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%"
+                        height="250px" class="visible-xs"></iframe>
             </div>
         </div>
     </div>
