--- a/src/Hph/View/front/home.html.twig
+++ b/src/Hph/View/front/home.html.twig
@@ -19,13 +19,13 @@
             <div class="separator-div text-justify home-progDiv">
                 {%  for artist in artists  %}
                     {% if loop.index%2 == 0 and loop.index<artists|length %}
-                        <p class="home-prog"><a href="/artist/{{ artist.id }}" class="home-link link-orange font-circula">{{ artist.name }}</a> <span class="orange">/</span></p>
+                        <p class="home-prog"><a href="/artist/{{ artist.slug }}" class="home-link link-orange font-circula">{{ artist.name }}</a> <span class="orange">/</span></p>
                     {% elseif loop.index%2 != 0 and loop.index<artists|length %}
-                        <p class="home-prog"><a href="/artist/{{ artist.id }}" class="home-link link-turquoise font-circula">{{ artist.name }}</a> <span class="turquoise">/</span></p>
+                        <p class="home-prog"><a href="/artist/{{ artist.slug }}" class="home-link link-turquoise font-circula">{{ artist.name }}</a> <span class="turquoise">/</span></p>
                     {% elseif loop.index%2 != 0 %}
-                        <p class="home-prog"><a href="/artist/{{ artist.id }}" class="home-link link-turquoise font-circula">{{ artist.name }}</a></p>
+                        <p class="home-prog"><a href="/artist/{{ artist.slug }}" class="home-link link-turquoise font-circula">{{ artist.name }}</a></p>
                     {% else %}
-                        <p class="home-prog"><a href="/artist/{{ artist.id }}" class="home-link link-orange font-circula">{{ artist.name }}</a></p>
+                        <p class="home-prog"><a href="/artist/{{ artist.slug }}" class="home-link link-orange font-circula">{{ artist.name }}</a></p>
                     {% endif %}
                 {% endfor %}
             </div>
