--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -53,7 +53,7 @@
         <div class="row">
             {% for artist in artists %}
                 <div class="col-md-3 col-sm-6">
-                    <a href="artiste/{{ artist.artist_id }}">
+                    <a href="artiste/{{ artist.slug }}">
                         <div class="thumbnail thumbnail-div prog-artist text-center">
                             <img src="../../../img/artist/{{ artist.img_artist }}" class="img-responsive {% if artist.status == 'canceled' %}img-cancel{% endif %}">
                             <div class="content-div prog-info text-center">
